# PCS2026

./: prova2.txt
Esercitazione1/: CMakeLists.txt  esercizio.cpp
esercitazione2/: CMakeLists.txt  es2.cpp  prova1.cpp  sort.cpp
